--- a/pom.xml
+++ b/pom.xml
@@ -90,26 +90,9 @@
         </dependency>
     </dependencies>
 
-    <distributionManagement>
-        <repository>
-            <id>github</id>
-            <url>https://maven.pkg.github.com/fmausberg/authframework-backend</url>
-        </repository>
-    </distributionManagement>
-
     <build>
-        <finalName>authframework-backend</finalName>
+        <finalName>recruiting-backend</finalName>
         <plugins>
-            <!-- Maven Deploy Plugin -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <version>2.8.2</version>
-                <configuration>
-                    <repositoryId>github</repositoryId>
-                    <url>https://maven.pkg.github.com/fmausberg/authframework-backend</url>
-                </configuration>
-            </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -160,7 +143,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>net.mausberg.authentication_framework_backend.AuthenticationFrameworkBackendApplication</mainClass>
+                    <mainClass>net.mausberg.recruiting_backend.RecruitingBackendApplication</mainClass>
                 </configuration>
             </plugin>
         </plugins>
